--- a/AeroTaxi/src/com/company/JFrames/cuestionario.form
+++ b/AeroTaxi/src/com/company/JFrames/cuestionario.form
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.JFrames.cuestionario">
-  <grid id="27dc6" binding="cuestionario" layout-manager="GridLayoutManager" row-count="6" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="cuestionario" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="613" height="400"/>
+      <xy x="20" y="20" width="661" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="a5e68" class="javax.swing.JLabel">
+      <component id="9381c" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Fecha del vuelo"/>
+          <text value="Fecha del Vuelo"/>
         </properties>
       </component>
-      <component id="65cc0" class="javax.swing.JTextField" binding="fechaField">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="9ea9" class="javax.swing.JLabel">
+      <component id="17c56" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Origen"/>
+          <text value="Recorrido"/>
         </properties>
       </component>
-      <component id="6edff" class="javax.swing.JTextField" binding="origenField">
+      <component id="3b2c1" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Cantidad de ocupantes"/>
+        </properties>
+      </component>
+      <component id="bafb0" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Servicio"/>
+        </properties>
+      </component>
+      <component id="8a33e" class="javax.swing.JTextField" binding="fechaField">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="2" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="27471" class="javax.swing.JTextField" binding="ocupantesField">
+      <component id="7ef26" class="javax.swing.JComboBox" binding="origenComboBox">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="a7819" class="javax.swing.JTextField" binding="ocupantesField">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="2" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -50,52 +64,60 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="37e52" class="javax.swing.JLabel">
+      <component id="33d14" class="javax.swing.JCheckBox" binding="goldCheckBox">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Cantidad de ocupantes"/>
+          <text value="GOLD"/>
         </properties>
       </component>
-      <component id="ff8ae" class="javax.swing.JTextField" binding="destinoField">
+      <component id="b6f34" class="javax.swing.JCheckBox" binding="silverCheckBox">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="d2d6f" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Destino"/>
+          <text value="SILVER"/>
         </properties>
       </component>
-      <component id="3cdbb" class="javax.swing.JLabel">
+      <component id="6e51" class="javax.swing.JCheckBox" binding="bronzeCheckBox">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="4" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="BRONZE"/>
+        </properties>
+      </component>
+      <component id="cc2d0" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Cuestionario"/>
         </properties>
       </component>
-      <component id="bd754" class="javax.swing.JButton" binding="OKButton" default-binding="true">
+      <component id="d6e7f" class="javax.swing.JButton" binding="volverAInicioButton">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="4" use-parent-layout="false"/>
+          <grid row="5" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="OK"/>
+          <text value="Volver"/>
         </properties>
       </component>
-      <component id="c53b4" class="javax.swing.JLabel">
+      <component id="4bcb" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Formato: dia/mes/año            "/>
+          <text value="Formato: dia/mes/año   "/>
+        </properties>
+      </component>
+      <component id="8b67" class="javax.swing.JButton" binding="okButton">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="CONFIRMAR"/>
         </properties>
       </component>
     </children>
