--- a/AeroTaxi/src/com/company/JFrames/register.form
+++ b/AeroTaxi/src/com/company/JFrames/register.form
@@ -48,7 +48,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="10" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Bienvenido!!!"/>
+          <text value="Bienvenido"/>
         </properties>
       </component>
       <component id="dca16" class="javax.swing.JTextField" binding="edadTextField">
@@ -87,7 +87,7 @@
         </constraints>
         <properties>
           <horizontalAlignment value="10"/>
-          <margin top="2" left="6" bottom="2" right="6"/>
+          <margin top="3" left="8" bottom="3" right="8"/>
           <text value=""/>
         </properties>
       </component>
