--- a/AeroTaxi/src/com/company/JFrames/verifyUser.form
+++ b/AeroTaxi/src/com/company/JFrames/verifyUser.form
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.JFrames.verifyUser">
-  <grid id="27dc6" binding="verifyUser" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="verifyUser" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="559" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="3f71f" class="javax.swing.JButton" binding="okButton">
         <constraints>
-          <grid row="2" column="0" row-span="2" col-span="3" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="20" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="3" col-span="5" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="20" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="OK"/>
+          <text value="Login"/>
         </properties>
       </component>
       <component id="87e0f" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="5" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Introduzca su DNI:"/>
+          <text value=" Ingrese su dni"/>
         </properties>
       </component>
       <component id="5dac8" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="21" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="21" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Bienvenido!!!"/>
@@ -34,11 +34,21 @@
       </component>
       <component id="628b7" class="javax.swing.JTextField" binding="dniField">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="5" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="55f4f" class="javax.swing.JButton" binding="registerButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Register"/>
+        </properties>
       </component>
     </children>
   </grid>
