--- a/AeroTaxi/src/com/company/JFrames/listado.form
+++ b/AeroTaxi/src/com/company/JFrames/listado.form
@@ -48,6 +48,16 @@
           <text value="Vuelos"/>
         </properties>
       </component>
+      <grid id="40f75" binding="jPanCalendar" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="line" title="datechooser">
+          <color color="-4473925"/>
+        </border>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
